--- a/index.html
+++ b/index.html
@@ -1,76 +1,266 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+
+  <!-- Custom styles for this template -->
+  <link href="css/webconf.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
+    type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
 
-    <title>Document</title>
-  </head>
+  <style>
+    #googleMap {
+      width: 100%;
+      /* Span the entire width of the screen */
+      height: 400px;
+      /* Set the height to 400 pixels */
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+      /* Change the color of the map to black and white */
+    }
+  </style>
+  <title>WebConference</title>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container">
       <a class="navbar-brand " href="#page-top">WebConference</a>
-      <div class="collapse navbar-collapse" id="navbarResposive">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>          
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#sobre">sobre</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#speakers">speakers</a>
+            <a class="nav-link js-scroll-trigger" href="#speakers">SPEAKERS</a>
+          </li>
+          <!--
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#about">PROGRAMA</a>
+              </li>
+              -->
+          <li class="nav-item">
+            <a id="aSponsors" class="nav-link js-scroll-trigger" href="#sponsors">SPONSORS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#sponsors">sponsors</a>
+            <a class="nav-link js-scroll-trigger" href="#contacts">CONTACTOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contactos">contactos</a>
+            <a id="btnLogin" class="nav-link" href="#">ÁREA PRIVADA</a>
           </li>
         </ul>
       </div>
+    </div>
+  </nav>
 
-      <!--Barra de navegação-->
-    </nav>
-    <header class="masthead">
-      <div class="container">
-        <div class="intro-text">
-          <!--TITULO-->
-          <!--BTN INSCRICAO-->
+  <!-- HEADER -->
+  <!--Imagem principal e botao de inscrição-->
+  <header class="masthead">
+    <div class="container">
+      <div class="intro-text">
+        <div class="intro-lead-in">Vamos celebrar a Web!</div>
+        <div class="intro-heading text-uppercase">WebConference</div>
+        <a id="btnRegister" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
+          href="#services">INSCREVER</a>
+      </div>
+    </div>
+  </header>
+
+
+  <!-- ######################### SOBRE ########################## -->
+  <section id="sobre">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Sobre</h2>
+          <h3 class="section-subheading ">Conferência sobre a Web a decorrer no dia <strong>22 de maio de 2018</strong>,
+            no <strong>Pavilhão da Web</strong>, Porto</h3>
         </div>
       </div>
-      <!--Imagem principal e botao de inscrição-->
-    </header>
-    <section id="about">
-      <!--Informações basicas sobre a conferencia-->
-    </section>
-    <section id="speakers">
-      <!--Informação sobre os oradores da conferencia-->
-    </section>
-    <section id="sponsers">
-      <!--Informação sobre os sponsors da conferencia-->
-    </section>
-    <section id="contacts">
-      <!--Informação sobre os contactos-->
-    </section>
-    <footer>
-      <!--Links para as redes sociais-->
-    </footer>
+      <div class="row text-center">
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<!--    <script src="js/animation.js"></script>  -->
-  </body>
+        <div class="col-md-6">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-globe fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="topic-heading">Computação Ubíqua</h4>
+          <p class="text-muted">Expandir a Web para fora do computador e ligá-la à Internet das Coisas!</p>
+        </div>
+
+        <div class="col-md-6">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="topic-heading">Responsividade</h4>
+          <p class="text-muted">Adaptar as aplicações Web a múltiplos dispositivos e torná-las mais responsivas em
+            termos de performance!</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ###################### SPEAKERS ####################### -->
+  <section class="bg-light" id="speakers">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Oradores</h2>
+          <h3 class="section-subheading text-muted">Especialistas internacionais do mundo da Web.</h3>
+        </div>
+      </div>
+      <div class="row" id="renderSpeakers">
+      </div>
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <p class="large text-muted">Oradores de grande qualidade que irão partilhar as últimas tendências do mundo do
+            desenvolvimento para a Web!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- ###################### SPONSORS ########################## -->
+  <section id="sponsors" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Sponsors</h2>
+        </div>
+      </div>
+      <div class="row" id="renderSponsors">
+      </div>
+    </div>
+  </section>
+
+  <!-- ####################### CONTACTOS ######################### -->
+  <section id="contacts">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Contactos</h2>
+          <h3 class="section-subheading text-muted">Deixe-nos a sua sugestão/dúvida e nós rapidamente entraremos em
+            contacto consigo!</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <form id="contactForm" name="sentMessage">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input class="form-control" id="name" type="text" placeholder="o seu nome" required>
+                </div>
+                <div class="form-group">
+                  <input class="form-control" id="email" type="email" placeholder="o seu email" required>
+                </div>
+                <div class="form-group">
+                  <input class="form-control" id="phone" type="tel" placeholder="o seu nº de telemóvel">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <textarea class="form-control" id="message" placeholder="a sua mensagem" required></textarea>
+                </div>
+              </div>
+
+              <div class="col-lg-12 text-center">
+                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar
+                  mensagem</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <br><br>
+    <div class="container-fluid" id="googleMap">
+      <div class="row">
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Footer -->
+  <footer class="">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <span class="copyright">Copyright &copy; WebConference 2018</span>
+        </div>
+        <div class="col-md-6">
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+    
+  <script src="js/animation.js"></script>
+
+  <!-- Plugin para usar janelas - sweetalert -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.26.9/sweetalert2.all.min.js"></script>
+
+  <!--Reference for webconf.js-->
+  <script src="js/webconf.js"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjD-qUnwh9v1-4QtN7Ds-Acij1KziP-A4&callback=myMap">
+  </script>
+</body>
+
 </html>
